# 42cursus

./: .gitignore  CMakeLists.txt
CPP/CPP00/: .gitignore
CPP/CPP00/ex00/: Makefile  megaphone  megaphone.cpp
CPP/CPP00/ex01/: Contact.cpp  Contact.hpp  Makefile  Phonebook.cpp  Phonebook.hpp  main.cpp  phonebook  phonebook.cpp
CPP/CPP00/ex02/: Account.cpp  Makefile  phonebook
CPP/CPP01/: .gitignore
CPP/CPP01/ex00/: Makefile  Zombie.cpp  Zombie.hpp  main.cpp  randomChump.cpp
CPP/CPP01/ex01/: Makefile  Zombie.cpp  Zombie.hpp  ZombieHorde.cpp  main.cpp
CPP/CPP01/ex02/: Makefile  main.cpp
CPP/CPP01/ex03/: HumanA.cpp  HumanA.hpp  HumanB.cpp  HumanB.hpp  Makefile  Weapon.cpp  Weapon.hpp  Zombie.hpp  ZombieHorde.cpp  main.cpp
CPP/CPP01/ex04/: Makefile.replace  main.cpp  replace
CPP/CPP01/ex05/: Karen.cpp  Makefile  main.cpp
CPP/CPP01/ex06/: Karen.cpp  Karen.hpp  Makefile  karenFilter  main.cpp
CPP/CPP02/: .gitignore
CPP/CPP02/ex00/: Fixed.cpp  Fixed.hpp  main.cpp
CPP/CPP02/ex01/: Fixed.cpp  Fixed.hpp  Makefile  main.cpp
CPP/CPP02/ex02/: Fixed.cpp  Fixed.hpp  main.cpp
CPP/CPP04/: .gitignore
CPP/CPP04/ex00/: Cat.h  (+8 more)
CPP/CPP05/: .gitignore
CPP/CPP06/: .gitignore
CPP/CPP07/: .gitignore
CPP/CPP08/: .gitignore
fract-ol/: Makefile  events.c  events.h  fractal.c  fractal.h  fractol  init.c  init.h  iterate.c  iterate.h  main.c  main.h  main.js  tools.c  tools.h  types.h
fract-ol/libft/: Makefile
ft_containers/: .clang-format  .gitignore  CMakeLists.txt  Makefile  main.test.cpp
ft_containers/includes/: RedBlackTree.hpp  iterator.hpp  map.hpp  set.hpp  stack.hpp  utility.hpp  vector.hpp
ft_containers/src/: RedBlackTree.hpp  algorithm.hpp  iterator.hpp  main.cpp  main.test.cpp  map.hpp  type_traits.hpp  utility.hpp  vector.hpp
ft_printf/: .gitignore  Makefile  ft_printf.c  ft_printf.h  print1.c  print2.c
ft_printf/libft/: ft_memcmp.c  ft_memmove.c
get_next_line/: Makefile  get_next_line.c  get_next_line.h  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils.c  get_next_line_utils_bonus.c
inception/: Makefile
inception/srcs/: .env  docker-compose.yml
libft/: .gitignore  ft_bzero.c  ft_memchr.c  ft_memcpy.c  ft_memset.c
miniRT/: Makefile  miniRT
miniRT/src/: main.c
minishell/: .gitignore  CMakeLists.txt  Makefile  built_ins.c  global.c  minishell  minishell.c  minishell.h  minishell.h.gch  rec_mult.c  setup.c  sort.c  split_better.c  utils.c
minishell/built_ins/: built_ins.h  cd.c  echo.c  exit.c  export.c  pwd.c  unset.c
minishell/lib/libft/: Makefile  libft.h
minishell/lib/libft/ft_printf/: ft_printf.c  print.c
minishell/libft/: Makefile  ft_lstclear.c  ft_lstdelone.c  ft_lstnew.c  ft_printf.c  libft.h
minishell/libft/ft_printf/: ft_printf.c
minishell/src/: main.c
minishell/src/built-in/: cd.c  cd.h  echo.c  echo.h  env.c  env.h  exit.c  exit.h  export.c  export.h  pwd.c  pwd.h  unset.c  unset.h
minishell/src/exec/: exec.c  exec.h  pipes.c  pipes.h
minishell/src/parser/: cmd_loop.c  cmd_loop_utils.c  cmd_loop_utils.h  heredoc.c  heredoc.h  parse_env.c  parser.c  parser.h  rec_mult.c  rec_mult.h  redirect.c  redirect.h  redirect_parse.c  redirect_parse.h  validator.c  validator.h  wildcard.c
minishell/src/parser/syntax/: braces.c  braces.h  op.c  pipes.c  validator.c
minishell/src/utils/: environ.c  environ.h  error.c  error.h  global.h  list.c  list.h  parsing.c  parsing.h  path.c  path.h  pipes.c  pipes.h  setup.c  sort.c  sort.h
minishell/utils/: env.c  global.c  utils.h
minitalk/: Makefile  c  c.c  client  client.c  server  server.c
minitalk/client/: client.c
minitalk/libft/: Makefile  ft_bzero.c  ft_memchr.c
minitalk/server/: server.c
philosophers/: philosophers.c  philosophers.h
philosophers/philo/: Makefile  check.c  check.h  init.c  init.h  mutex.c  mutex.h  philosophers.c  philosophers.h  types.h  utils.c  utils.h
philosophers/philo_bonus/: Makefile  check.c  check.h  init.c  init.h  mutex.c  philosophers.c  philosophers.h  types.h  utils.h
push_swap/: .gitignore  Makefile  bubble_sort.c  bubble_sort.h  errorstempfile.txt  main.c  math.c  math.h  median.c  median.h  push_swap  quicksort.c  quicksort.h  sort.c  sort.h  sort5.c  sort5.h  sort_big.c  sort_big.h  stack.c  stack.h  utils.c  utils.h
push_swap/libft/: Makefile  ft_lstnew.c  ft_split.c  libft.h
(+149 files in other folders)
